# ParvEB

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md
.githooks/: pre-push
.github/workflows/: code-quality.yml
include/: memory_pool.hpp  simd_utils.hpp  stopwatch.hpp  veb24.hpp  veb32.hpp  veb40.hpp  veb48.hpp  veb64.hpp  veb_branch.hpp  veb_branch16.hpp  veb_branch_dense.hpp  veb_branch_detail.hpp  veb_branch_sparse.hpp  veb_leaf6.hpp  veb_leaf64.hpp  veb_leaf8.hpp  veb_top32.hpp  veb_top_node.hpp  veb_types.hpp
scripts/: build_release.sh  build_with_debug.sh  compile.sh  format.sh  perf_report_veb.sh  perf_run_veb.sh  perf_stat_run_once.sh  perf_stat_veb.sh  run_benchmark.sh  run_test.sh  run_veb.sh
src/: run_veb.cpp  simd_utils.cpp  veb_benchmark.cpp  veb_top_node.cpp
tests/: CMakeLists.txt  branch12_test.cpp  branch16_test.cpp  branch64_test.cpp  leaf64_test.cpp  leaf6_test.cpp  leaf8_test.cpp  veb24_test.cpp  veb32_test.cpp  veb40_test.cpp  veb48_test.cpp  veb64_test.cpp
